update detail event

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                             if (nama) {
                                 nama = nama.replace(/-/g, ' ').replace(/\b\w/g, char => char.toUpperCase());
                             } else {
-                                nama = 'Anggota Keluarga';
+                                nama = 'Anggota keluarga Bapak Wiryoredjo Semun';
                             }
                             document.write(nama);
                         </script>
@@ -119,9 +119,9 @@
             <div class="flip-card-back">
                 <h2>Detail Acara</h2>
                 <p>Kami sangat senang Anda bisa bergabung!</p>
-                <p>Tanggal: [Masukkan Tanggal]</p>
-                <p>Waktu: [Masukkan Waktu]</p>
-                <p>Lokasi: [Masukkan Lokasi]</p>
+                <p>Tanggal: Jumat, 04 April 2025</p>
+                <p>Waktu: 09.00 Pagi</p>
+                <p>Lokasi: Rumah Pak Salekan Pare</p>
             </div>
         </div>
     </div>
